--- a/index.html
+++ b/index.html
@@ -167,20 +167,37 @@
             The department is a recognized research center of Anna University, Chennai and students are pursuing Ph.D.
             programme.
           </div>
-        </div>
-        <div class="">
+
           <div class="">
-            <div style="text-align: center;" class="">
-              <img class="imgf" src="./img/hod-Maths.jpeg" alt="Dr. B.Praba" scale="0">
+            <div class="">
+              <div style="text-align: center;" class="">
+                <img class="imgf" src="./img/hod-Maths.jpeg" alt="Dr. B.Praba" scale="0">
+              </div>
+              <div class="textf mathHod">
+                <h5>Dr. B. Praba</h5>
+                Head of the Department
+                <p><strong>Department of Mathematics, SSN College of Engineering</strong></p>
+              </div> <!-- .et_pb_team_member_description -->
             </div>
-            <div class="textf mathHod">
-              <h5>Dr. B. Praba</h5>
-              Head of the Department
-              <p><strong>Department of Mathematics, SSN College of Engineering</strong></p>
-            </div> <!-- .et_pb_team_member_description -->
           </div>
         </div>
-      </div>
+        <div>
+          <h2 style="padding-top: 40px;text-align: center; color: black;" class="abouts">SSN Math Club
+          </h2>
+          <div class="cont">SSN Math Club is a student-run club that organizes Math-related activities. Mathematics is
+            a unique subject that is used in day to day activities and continues to remain an integral part of our
+            lives. Math club makes Mathematics fun and exciting. The exploration of mathematics was done in a
+            friendlier way among the students and the club appreciates the usefulness, and magnificence of
+            mathematics. Through SSN Math Club, we are organizing various events like Quiz, Dumb-C, Mathematical
+            Modeling, Paper presentation and “As You Like it” (Math Games) with the title “National Level Mathematical
+            Symposium (exlog)” in every year.
+            The students in the Club will have opportunities to apply and improve math skills by participating in math
+            competitions and learning with cohorts. Math Club will support classroom learning, enrich their skills
+            with higher-order thinking. Also, since positive attitudes are associated with higher levels of math
+            achievement, such clubs have the potential to encourage students to pursue mathematics-related careers.
+            The activities of this club are fully supported by our SSN management.
+          </div>
+        </div>
     </section><!-- #about -->
     <section id="team">
 
@@ -394,30 +411,30 @@
         </div>
         <div id="right_event">
           <p>
-            <ul>
-              <li><span style="font-weight: 600;">Maximum of three members</span> in a team.</li>
-              <li>Registration fee is Rs. 250 per team. The registration amount can be paid either online using UPI or
-                on-spot on the day of the symposium</li>
-              <li>Before registering in the google form, kindly make your team and then follow the link. Only one member
-                must register per team with all
-                the details of the team members.
-              </li>
-              <li>There are <span style="font-weight: 600;">two rounds, Preliminary and Finals.</span> </li>
-              <li><span style="font-weight: 600;">Round 1: Preliminary</span> </li>
-              <li>Contains 50 to 75 questions of MCQ type with negative marking.</li>
-              <li>Basic Aptitude, logical Reasoning and basic Mathematics questions. Duration: 60 - 90 mins.</li>
-              <li>Out of the all registered teams, <span style="font-weight: 600;">six teams will be selected for Round
-                  2.</span></li>
-              <li><span style="font-weight: 600;">Round 2: Finals</span></li>
-              <li>Some complex questions which further consisting of two rounds. Each team will be posted questions in 6
-                different channels of MS Teams
-                by our volunteers and after the end of each round you will be notified your scores.
-              </li>
-              <li>Register now using the <span style="font-weight: 600;"><a class="aform"
-                    href="https://docs.google.com/forms/d/e/1FAIpQLSfSh_lh3O2Mbn0wHkROI-uZ8meC9qlWvuxCcOzzBwBzF5quNA/viewform">Google
-                    Form</a></span></li>
-              <li><span style="font-weight: 600;">The total cash prize worth Rs. 35,000.</span></li>
-            </ul>
+          <ul>
+            <li><span style="font-weight: 600;">Maximum of three members</span> in a team.</li>
+            <li>Registration fee is Rs. 250 per team. The registration amount can be paid either online using UPI or
+              on-spot on the day of the symposium</li>
+            <li>Before registering in the google form, kindly make your team and then follow the link. Only one member
+              must register per team with all
+              the details of the team members.
+            </li>
+            <li>There are <span style="font-weight: 600;">two rounds, Preliminary and Finals.</span> </li>
+            <li><span style="font-weight: 600;">Round 1: Preliminary</span> </li>
+            <li>Contains 50 to 75 questions of MCQ type with negative marking.</li>
+            <li>Basic Aptitude, logical Reasoning and basic Mathematics questions. Duration: 60 - 90 mins.</li>
+            <li>Out of the all registered teams, <span style="font-weight: 600;">six teams will be selected for Round
+                2.</span></li>
+            <li><span style="font-weight: 600;">Round 2: Finals</span></li>
+            <li>Some complex questions which further consisting of two rounds. Each team will be posted questions in 6
+              different channels of MS Teams
+              by our volunteers and after the end of each round you will be notified your scores.
+            </li>
+            <li>Register now using the <span style="font-weight: 600;"><a class="aform"
+                  href="https://docs.google.com/forms/d/e/1FAIpQLSfSh_lh3O2Mbn0wHkROI-uZ8meC9qlWvuxCcOzzBwBzF5quNA/viewform">Google
+                  Form</a></span></li>
+            <li><span style="font-weight: 600;">The total cash prize worth Rs. 35,000.</span></li>
+          </ul>
           </p>
           <!-- <h1 style="text-align: center">Registrations closed!!</h1> -->
         </div>
