bus routes & math club info update

--- a/index.html
+++ b/index.html
@@ -67,9 +67,9 @@
       <h1 class="h1max">SSN ExLog</h1>
       <h2><b>National Level Mathematical Symposium</b></h2>
       <div style="display: flex;">
-        <a href="https://docs.google.com/forms/d/e/1FAIpQLSfSh_lh3O2Mbn0wHkROI-uZ8meC9qlWvuxCcOzzBwBzF5quNA/viewform"
+        <a href="https://drive.google.com/file/d/1M3Sx_HG2F3PNzIkb9R97GDLs-5kHZPAf/view?usp=sharing"
           style="background-color: slategray; font-weight: 500; color: white; padding: 8px; border-radius: 10px;">
-          Register Now!
+          Bus Routes
         </a>
         <a href="https://drive.google.com/file/d/1lcO1zW4fdYzaMVZBobH6Vw1n2yMGHDuG/view?usp=sharing"
           style="background-color: slategray; font-weight: 500; color: white; padding: 8px; margin-left: 15px; border-radius: 10px;">
@@ -196,6 +196,100 @@
             with higher-order thinking. Also, since positive attitudes are associated with higher levels of math
             achievement, such clubs have the potential to encourage students to pursue mathematics-related careers.
             The activities of this club are fully supported by our SSN management.
+          </div>
+          <div class="cont" style="text-align: left;">The objectives of the Math club are,</div>
+          <ul>
+            <li>Encourage a positive attitude towards mathematics</li>
+            <li>Motivate the mathematical curiosity.</li>
+            <li>Promote cross-curricular thinking and the holistic development of students</li>
+            <li>Develop a healthy interest in mathematics and study mathematics beyond the classroom</li>
+            <li>Inspire thinking, challenge and teamwork.</li>
+          </ul>
+          <div class="cont" style="text-align: left;">The following are the MATH CLUB activities of the Department of
+            Mathematics, SSN College of Engineering, and these activities are conducted on various days of the year:
+          </div>
+          <ul>
+            <li>ExLOG</li>
+            <li>MATH QUIZ</li>
+            <li>RAMANUJAN DAY</li>
+            <li>SSN CUBE OPEN</li>
+          </ul>
+        </div>
+        <div>
+          <h2 style="padding-top: 40px;text-align: left; color: black;font-size: x-large;" class="abouts">SSN CUBE OPEN
+          </h2>
+          <div class="cont" style="text-align: left;line-height: 4vh;">Speed cubing is the process of solving a Rubik's
+            Cube in the shortest possible time.
+            Contestants used their mathematical, cognitive skills as well as dexterity to get a winning time. Rubik’s
+            cube is primarily a mathematical puzzle, which can be solved by deploying Mathematical Group Theory.
+            Mathematics Professors around the world have used Rubik’s cube to explain the concepts of permutation and
+            combination. Tricky puzzles regarding Rubik’s cube form an integral part of many competitive exams like GRE,
+            GMAT, CAT and also the recruitment process of many MNCs. The knowledge about Rubik’s cube enables students
+            to visualize the problem statement accurately. Identifying an algorithm to find the least number of steps
+            required to solve a particular scramble has been a trending research topic in the field of mathematics and
+            computer science. Recent research involves deploying robots programmed by Artificial Intelligence algorithms
+            to solve the Rubik’s cube. A significant part of AI-based approach is based on mathematical theories. The
+            SSN Cube Open started in 2016 as a part of SSN Maths Club and successfully revamped in consecutive years.
+            Nearly 40 volunteers worked for making SSN Cube Open to a grand success every year.
+            <br>
+            <br>
+            2016 participant count – 94
+            <br>
+            2017 participant count – 105
+            <br>
+            2018 participant count – 110
+            <br>
+            2019 participant count -100(Restricted)
+            <br>
+            <br>
+            Thirteen different speed-cubing events were held in every SSN Cube Open. Other than the common events like
+            3x3x3, 2x2x2 various events like Megaminx, Pyraminx, Rubik’s clock, Skewb, Square one, 4x4x4, Blindfolded
+            3x3x3, Multiple Blindfold 3x3x3, One-handed 3x3x3 were also conducted.
+            <br>
+          </div>
+        </div>
+        <div>
+          <h2 style="padding-top: 40px;text-align: left; color: black;font-size: x-large;" class="abouts">SSN Math Quiz
+          </h2>
+          <div class="cont" style="text-align: left;line-height: 4vh;">SSN Math Quiz motivates the students to apply the
+            various mathematical techniques in the respective field and to promote more mathematical knowledge
+            applicable to Engineering and Technology among students. This event exists to encourage, challenge and
+            develop the skills and enjoyment of anyone with an interest in the fascinating world of mathematics. In the
+            year 2019, we have organized a mega quiz with grand success, more than 150 teams from colleges participated
+            in and around our Chennai district Among 150 teams, 50 teams were from other colleges like SRM, VIT, IIT
+            Madras, ST. Joseph’s, NIT Trichy, etc. There were four different technical rounds conducted by our college
+            students. In the final round, two teams from SSNCE and one from IITM were selected. Our college team won
+            first prize worth Rs. 11500 and second prize worth 7000, third prize won by IITM. With immense response from
+            students of various colleges and active participation from our college students just got the event news made
+            to the newspapers and online articles.
+            <br>
+          </div>
+        </div>
+        <div>
+          <h2 style="padding-top: 40px;text-align: left; color: black;font-size: x-large;" class="abouts">National
+            Mathematics Day
+          </h2>
+
+          <div class="cont" style="text-align: left;line-height: 4vh;">National
+            Mathematics Day
+            Srinivasa Ramanujan is a
+            renowned Indian mathematician whose contributions gave an entirely new dimension to Mathematics. In 2011,
+            on
+            the 125th anniversary of his birth, the Indian government declared that 22 December will be celebrated
+            every
+            year as “National Mathematics Day“ for paying tribute to the great mathematicians in India. Then Indian
+            Prime Minister Manmohan Singh also declared that 2012 would be celebrated as National Mathematics Year.
+            Stamps picturing Ramanujan were issued by the government of India in 1962, 2011, 2012 and 2016. In this
+            connection, the Department of Mathematics, SSN College of Engineering successfully celebrated the 131st
+            birth anniversary of Srinivasa Ramanujan as ''National Mathematics Day`` on December 22, 2018. We
+            conducted
+            various events like Paper Puzzle, Math Quiz and Sudoku. Prof. T.N. Shanmugam, Retired Professor, Anna
+            University, Chennai delivered a talk on “About Srinivasa Ramanujan” and acted as Quizmaster for the event
+            Math Quiz. Cash prizes were provided to the winners and certificates of participation were provided to all
+            participants. The atmosphere of the event provided the necessary calmness to the participants who
+            expressed
+            interest to participate in the upcoming editions.
+            <br>
           </div>
         </div>
     </section><!-- #about -->
