--- a/index.html
+++ b/index.html
@@ -184,7 +184,8 @@
         <div>
           <h2 style="padding-top: 40px;text-align: center; color: black;" class="abouts">SSN Math Club
           </h2>
-          <div class="cont">SSN Math Club is a student-run club that organizes Math-related activities. Mathematics is
+          <div class="cont" style="text-align: justify;">SSN Math Club is a student-run club that organizes Math-related
+            activities. Mathematics is
             a unique subject that is used in day to day activities and continues to remain an integral part of our
             lives. Math club makes Mathematics fun and exciting. The exploration of mathematics was done in a
             friendlier way among the students and the club appreciates the usefulness, and magnificence of
@@ -197,7 +198,7 @@
             achievement, such clubs have the potential to encourage students to pursue mathematics-related careers.
             The activities of this club are fully supported by our SSN management.
           </div>
-          <div class="cont" style="text-align: left;">The objectives of the Math club are,</div>
+          <div class="cont" style="text-align: justify;">The objectives of the Math club are,</div>
           <ul>
             <li>Encourage a positive attitude towards mathematics</li>
             <li>Motivate the mathematical curiosity.</li>
@@ -205,7 +206,7 @@
             <li>Develop a healthy interest in mathematics and study mathematics beyond the classroom</li>
             <li>Inspire thinking, challenge and teamwork.</li>
           </ul>
-          <div class="cont" style="text-align: left;">The following are the MATH CLUB activities of the Department of
+          <div class="cont" style="text-align: justify;">The following are the MATH CLUB activities of the Department of
             Mathematics, SSN College of Engineering, and these activities are conducted on various days of the year:
           </div>
           <ul>
@@ -218,7 +219,8 @@
         <div>
           <h2 style="padding-top: 40px;text-align: left; color: black;font-size: x-large;" class="abouts">SSN CUBE OPEN
           </h2>
-          <div class="cont" style="text-align: left;line-height: 4vh;">Speed cubing is the process of solving a Rubik's
+          <div class="cont" style="text-align: justify;line-height: 4vh;">Speed cubing is the process of solving a
+            Rubik's
             Cube in the shortest possible time.
             Contestants used their mathematical, cognitive skills as well as dexterity to get a winning time. Rubik’s
             cube is primarily a mathematical puzzle, which can be solved by deploying Mathematical Group Theory.
@@ -249,9 +251,11 @@
           </div>
         </div>
         <div>
-          <h2 style="padding-top: 40px;text-align: left; color: black;font-size: x-large;" class="abouts">SSN Math Quiz
+          <h2 style="padding-top: 40px;text-align: justify; color: black;font-size: x-large;" class="abouts">SSN Math
+            Quiz
           </h2>
-          <div class="cont" style="text-align: left;line-height: 4vh;">SSN Math Quiz motivates the students to apply the
+          <div class="cont" style="text-align: justify;line-height: 4vh;">SSN Math Quiz motivates the students to apply
+            the
             various mathematical techniques in the respective field and to promote more mathematical knowledge
             applicable to Engineering and Technology among students. This event exists to encourage, challenge and
             develop the skills and enjoyment of anyone with an interest in the fascinating world of mathematics. In the
@@ -266,11 +270,11 @@
           </div>
         </div>
         <div>
-          <h2 style="padding-top: 40px;text-align: left; color: black;font-size: x-large;" class="abouts">National
+          <h2 style="padding-top: 40px;text-align: justify; color: black;font-size: x-large;" class="abouts">National
             Mathematics Day
           </h2>
 
-          <div class="cont" style="text-align: left;line-height: 4vh;">National
+          <div class="cont" style="text-align: justify;line-height: 4vh;">National
             Mathematics Day
             Srinivasa Ramanujan is a
             renowned Indian mathematician whose contributions gave an entirely new dimension to Mathematics. In 2011,
@@ -530,7 +534,7 @@
             <li><span style="font-weight: 600;">The total cash prize worth Rs. 35,000.</span></li>
           </ul>
           </p>
-          <!-- <h1 style="text-align: center">Registrations closed!!</h1> -->
+          <h1 style="text-align: center">Registrations closed!!</h1>
         </div>
       </div>
 
