changes in hero

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
           <div class="ssn"><img src="./img/SSN.svg" style="width:90px"></div>
         </a>
       </div>
-      <div id="exl" class="exlo padd"><img src="./img/exlog.png" style="width:65px"></div>
+      <div id="exl" class="exlo padd"><img src="./img/logo.jpeg" style="width:65px"></div>
       <nav id="nav-menu-container">
         <ul class="nav-menu">
           <li class="menu-active"><a href="#hero">Home</a></li>
@@ -64,7 +64,8 @@
   ============================-->
   <section id="hero">
     <div class="hero-container">
-      <h1 class="h1max">SSN ExLog</h1>
+      <h1 class="h1max">SSN Math Club </h1>
+      <h1 class="h1max">eXLog 2023</h1>
       <h2><b>National Level Mathematical Symposium</b></h2>
       <div style="display: flex;">
         <a href="https://drive.google.com/file/d/1M3Sx_HG2F3PNzIkb9R97GDLs-5kHZPAf/view?usp=sharing"
@@ -75,11 +76,26 @@
           style="background-color: slategray; font-weight: 500; color: white; padding: 8px; margin-left: 15px; border-radius: 10px;">
           Program Schedule
         </a>
+
+
+
         <!-- <a href="https://drive.google.com/file/d/1PS6_MxPC_afS3hvKfZDpsF681ycKYFSu/view?usp=sharing" style="background-color: slategray; font-weight: 500; color: white; padding: 8px; margin-left: 15px; border-radius: 10px;">
           Inaugural Invitation
         </a> -->
       </div>
+      <br>
+
+      <h2 style="color: red
+      ;"><b>Registrations Closed!</b></h2>
+      <h1 style="color:white" class='h1new'><b>On the spot registrations from <b> 8:30 am to 9:30 am</b> at <b> Mini
+            Auditorium</b></b></h1>
     </div>
+
+    <style>
+      .h1new {
+        font-size: large;
+      }
+    </style>
   </section><!-- #hero -->
 
   <main id="main">
@@ -509,30 +525,30 @@
         </div>
         <div id="right_event">
           <p>
-          <ul>
-            <li><span style="font-weight: 600;">Maximum of three members</span> in a team.</li>
-            <li>Registration fee is Rs. 250 per team. The registration amount can be paid either online using UPI or
-              on-spot on the day of the symposium</li>
-            <li>Before registering in the google form, kindly make your team and then follow the link. Only one member
-              must register per team with all
-              the details of the team members.
-            </li>
-            <li>There are <span style="font-weight: 600;">two rounds, Preliminary and Finals.</span> </li>
-            <li><span style="font-weight: 600;">Round 1: Preliminary</span> </li>
-            <li>Contains 50 to 75 questions of MCQ type with negative marking.</li>
-            <li>Basic Aptitude, logical Reasoning and basic Mathematics questions. Duration: 60 - 90 mins.</li>
-            <li>Out of the all registered teams, <span style="font-weight: 600;">six teams will be selected for Round
-                2.</span></li>
-            <li><span style="font-weight: 600;">Round 2: Finals</span></li>
-            <li>Some complex questions which further consisting of two rounds. Each team will be posted questions in 6
-              different channels of MS Teams
-              by our volunteers and after the end of each round you will be notified your scores.
-            </li>
-            <li>Register now using the <span style="font-weight: 600;"><a class="aform"
-                  href="https://docs.google.com/forms/d/e/1FAIpQLSfSh_lh3O2Mbn0wHkROI-uZ8meC9qlWvuxCcOzzBwBzF5quNA/viewform">Google
-                  Form</a></span></li>
-            <li><span style="font-weight: 600;">The total cash prize worth Rs. 35,000.</span></li>
-          </ul>
+            <ul>
+              <li><span style="font-weight: 600;">Maximum of three members</span> in a team.</li>
+              <li>Registration fee is Rs. 250 per team. The registration amount can be paid either online using UPI or
+                on-spot on the day of the symposium</li>
+              <li>Before registering in the google form, kindly make your team and then follow the link. Only one member
+                must register per team with all
+                the details of the team members.
+              </li>
+              <li>There are <span style="font-weight: 600;">two rounds, Preliminary and Finals.</span> </li>
+              <li><span style="font-weight: 600;">Round 1: Preliminary</span> </li>
+              <li>Contains 50 to 75 questions of MCQ type with negative marking.</li>
+              <li>Basic Aptitude, logical Reasoning and basic Mathematics questions. Duration: 60 - 90 mins.</li>
+              <li>Out of the all registered teams, <span style="font-weight: 600;">six teams will be selected for Round
+                  2.</span></li>
+              <li><span style="font-weight: 600;">Round 2: Finals</span></li>
+              <li>Some complex questions which further consisting of two rounds. Each team will be posted questions in 6
+                different channels of MS Teams
+                by our volunteers and after the end of each round you will be notified your scores.
+              </li>
+              <li>Register now using the <span style="font-weight: 600;"><a class="aform"
+                    href="https://docs.google.com/forms/d/e/1FAIpQLSfSh_lh3O2Mbn0wHkROI-uZ8meC9qlWvuxCcOzzBwBzF5quNA/viewform">Google
+                    Form</a></span></li>
+              <li><span style="font-weight: 600;">The total cash prize worth Rs. 35,000.</span></li>
+            </ul>
           </p>
           <h1 style="text-align: center">Registrations closed!!</h1>
         </div>
