--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
       <br>
 
       <h2 style="color: red
-      ;"><b>Registrations Closed!</b></h2>
+      ;"><b>Online Registrations Closed!</b></h2>
       <h1 style="color:white" class='h1new'><b>On the spot registrations from <b> 8:30 am to 9:30 am</b> at <b> Mini
             Auditorium</b></b></h1>
     </div>
@@ -544,13 +544,12 @@
                 different channels of MS Teams
                 by our volunteers and after the end of each round you will be notified your scores.
               </li>
-              <li>Register now using the <span style="font-weight: 600;"><a class="aform"
-                    href="https://docs.google.com/forms/d/e/1FAIpQLSfSh_lh3O2Mbn0wHkROI-uZ8meC9qlWvuxCcOzzBwBzF5quNA/viewform">Google
-                    Form</a></span></li>
+              <!-- <li>Register now using the <span style="font-weight: 600;"><a class="aform" href=""><s>Google
+                      Form</s></a></span></li> -->
               <li><span style="font-weight: 600;">The total cash prize worth Rs. 35,000.</span></li>
             </ul>
           </p>
-          <h1 style="text-align: center">Registrations closed!!</h1>
+          <h1 style="text-align: center">Online Registrations closed!!</h1>
         </div>
       </div>
 
