--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
           <b>National Level Mathematical Symposium</b>
         </h2>
         <div style="display: flex; flex-direction: column; padding-top: 30px">
-          <!-- <div>
+          <div>
             <a
               href="https://drive.google.com/file/d/1M3Sx_HG2F3PNzIkb9R97GDLs-5kHZPAf/view?usp=sharing"
               style="
@@ -125,13 +125,13 @@
             <!-- <a href="https://drive.google.com/file/d/1PS6_MxPC_afS3hvKfZDpsF681ycKYFSu/view?usp=sharing" style="background-color: slategray; font-weight: 500; color: white; padding: 8px; margin-left: 15px; border-radius: 10px;">
           Inaugural Invitation
         </a> -->
-          <!-- </div> -->
-          <!-- <br /> -->
+          </div>
+          <br />
           <!-- <h2 style="color: red;"><b>Online Registrations Closed!</b></h2> -->
         </div>
-        <div style="margin-top: 0; margin-bottom: 1%">
+        <div style="margin-top: 1%; margin-bottom: 1%">
           <a
-            href="https://docs.google.com/forms/d/e/1FAIpQLSc7sK4m8F3hWv8ECZcbfpX89OXYH98Wb7HRON9agkaYJ19e_Q/viewform"
+            href="#"
             style="
               background-color: white;
               font-weight: 600;
@@ -610,7 +610,7 @@
           class="flexc"
         >
           <div id="left_event">
-            <img id="event_img" src="./img/exLog24_poster.jpg" />
+            <img id="event_img" src="./img/math_club.jpeg" />
           </div>
           <div id="right_event">
             <ul>
@@ -619,7 +619,7 @@
                 in a team.
               </li>
               <li>
-                Registration fee is Rs. 200 per team. The registration amount
+                Registration fee is Rs. 250 per team. The registration amount
                 can be paid either online using UPI or on-spot on the day of the
                 symposium
               </li>
@@ -660,16 +660,14 @@
               <li>
                 Register now using the
                 <span style="font-weight: 600"
-                  ><a
-                    class="aform"
-                    href="https://docs.google.com/forms/d/e/1FAIpQLSc7sK4m8F3hWv8ECZcbfpX89OXYH98Wb7HRON9agkaYJ19e_Q/viewform"
+                  ><a class="aform" href="https://www.google.com"
                     >Google Form</a
                   ></span
                 >
               </li>
               <li>
                 <span style="font-weight: 600"
-                  >The total cash prize worth Rs. 30,000.</span
+                  >The total cash prize worth Rs. 35,000.</span
                 >
               </li>
             </ul>
@@ -780,8 +778,8 @@
           <h4>
             <b>Contact Details:-</b><br /><br />
             <b>Heads:</b><br /><br />
-            <b>1: </b>Swaati - 7338433007<br /><br />
-            <b>2: </b>Sanjai Balajee - 8220267097<br /><br />
+            <b>1: </b>Prasanna - 7639025362<br /><br />
+            <b>2: </b>Maheshwari M - 9445576963<br /><br />
             <b>Deputy Head:</b><br /><br />
             <b>1: </b>Aishwarya - 9994702933<br /><br />
             <b>Volunteers:</b><br /><br />
@@ -833,7 +831,7 @@
         </h4>
       </div> -->
 
-        <!-- <button class="collapsible">
+        <button class="collapsible">
           RIDDLE CRYPT - Solve to find the way out of the maze
         </button>
         <div class="content">
@@ -871,7 +869,7 @@
             <b>2: </b>Karthik Vijayakumar - 8300683073<br /><br />
             <b>3: </b>Jeya Marshalin - 6382671285<br /><br />
           </h4>
-        </div> -->
+        </div>
 
         <button class="collapsible">MEDLEY - Let's Mix Math with games</button>
         <div class="content">
@@ -1022,7 +1020,7 @@
     </div>
     </section>#portfolio -->
 
-      <!-- <section id="team">
+      <section id="team">
         <div class="container wow fadeIn">
           <div class="col-lg-auto col-md-1 wow fadeInUp" data-wow-delay="0.6s">
             <div class="section-header">
@@ -1034,7 +1032,7 @@
               </h3>
             </div>
           </div>
-          <div class="row justify-content-around">
+          <div class="row">
             <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.2s">
               <div class="box">
                 <h3 style="text-align: left" class="abouts">
@@ -1065,9 +1063,9 @@
                   </p>
                 </div>
               </div>
-            </div> -->
+            </div>
 
-      <!-- <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.6s">
+            <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.6s">
               <div class="box">
                 <h3 style="text-align: left" class="abouts">
                   Overall Coordinators
@@ -1102,8 +1100,8 @@
                   <br />
                 </p>
               </div>
-            </div> -->
-      <!-- 
+            </div>
+
             <div class="col-lg-4 col-md-2 wow fadeInUp" data-wow-delay="0.6s">
               <div class="box">
                 <h3 id="gal" style="text-align: left" class="abouts">
@@ -1128,15 +1126,15 @@
               </div>
             </div>
           </div>
-        </div> -->
-      <!-- <div class="container wow fadeIn">
+        </div>
+        <!-- <div class="container wow fadeIn">
       <div class="col-lg-auto col-md-6 wow fadeInUp" data-wow-delay="0.9s">
         <div class="section-header">
           <h3 class="section-title section-description" style="color: #111!important; background-color: transparent;">
             Overall</h3>
         </div>
       </div> -->
-      <!-- <div class="row">
+        <!-- <div class="row">
         <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.4s">
           <div class="box">
             <h3 style="text-align: left;" class="abouts">Faculty Incharge</h3>
@@ -1184,7 +1182,7 @@
         </div>
       </div>
     </div> -->
-      <!-- </section> -->
+      </section>
 
       <section id="contact">
         <div class="container wow fadeInUp">
@@ -1202,21 +1200,29 @@
             <div class="flexc">
               <div class="textf">
                 <br />
-                <h4>Swaati</h4>
-                <h4><a href="tel:+917338433007">7338433007</a></h4>
+                <h4>Shri Thrisha</h4>
+                <h4><a href="tel:+919384691387">9384691387</a></h4>
                 <br />
-                <br />
-                <h4>Venkatesh</h4>
-                <h4><a href="tel:+919789060141">9789060141</a></h4>
+                <h4>Keerthivasan M</h4>
+                <h4><a href="tel:+919944937594">9944937594</a></h4>
                 <br />
               </div>
               <div class="textf">
                 <br />
-                <h4>Sanjai Balajee</h4>
-                <h4><a href="tel:+918220267097">8220267097</a></h4>
+                <h4>Prasanna</h4>
+                <h4><a href="tel:+917639025362">7639025362</a></h4>
                 <br />
-                <h4>Marshlin</h4>
-                <h4><a href="tel:+916382671285">6382671285</a></h4>
+                <h4>Dhanya</h4>
+                <h4><a href="tel:+919080082025">9080082025</a></h4>
+                <br />
+              </div>
+              <div class="textf">
+                <br />
+                <h4>Preethi B</h4>
+                <h4><a href="tel:+918667030250">8667030250</a></h4>
+                <br />
+                <h4>Janakiram</h4>
+                <h4><a href="tel:+919566912301">9566912301</a></h4>
                 <br />
               </div>
             </div>
@@ -1224,22 +1230,23 @@
             <div class="headerText text-center">
               <h2 class="">Venue</h2>
               <iframe
-                <iframe
-                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7782.824270049541!2d80.19337141495983!3d12.751725764214058!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3a52512598748685%3A0x4ca90e4de4911753!2sSSN%20Main%20Auditorium!5e0!3m2!1sen!2sin!4v1709397593640!5m2!1sen!2sin"
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3891.427754459268!2d80.19154321532423!3d12.75070952313538!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3a52512e6d9f6569%3A0x2f59c80ccabea9b0!2sMini%20Auditorium-%20SSN%20College%20Of%20Engineering!5e0!3m2!1sen!2sin!4v1647364074002!5m2!1sen!2sin"
                 frameborder="0"
                 style="border: 0"
                 allowfullscreen=""
               ></iframe>
             </div>
+
             <div class="social-links">
               <br />
+
+              <a href="https://www.instagram.com/ssnmathclub/" class="instagram"
+                ><i class="fa fa-instagram"></i
+              ></a>
+
               <a
-                href="https://www.instagram.com/ssnmathclub/"
-                style="margin-right: 7.5px"
-              >
-                <i class="fa fa-instagram"></i>
-              </a>
-              <a href="mailto:ssnexlog24@gmail.com"
+                href="mailto:ssnexlog@gmail.com?subject=subject text"
+                class="linkedin"
                 ><i class="fa fa-envelope"></i
               ></a>
             </div>
@@ -1259,10 +1266,8 @@
 
       <div class="container">
         <div class="credits">
-          <span style="padding-bottom: 5px">
-            Designed by Kishore &amp; Mano</span
-          >
-          <span>Maintained by Pranav Vaithiya Subramani</span>
+          Designed by Kishore &amp; Mano <br />
+          Maintained by Pranav Vaithiya Subramani &amp; Sanjai Balajee <br />
         </div>
       </div>
     </footer>
