--- a/index.html
+++ b/index.html
@@ -54,15 +54,15 @@
           </a>
         </div>
         <div id="exl" class="exlo">
-          <img src="./img/logo.jpeg" style="width: 65px" />
+          <img src="./img/exlog_logo.jpeg" style="width: 65px" />
         </div>
         <nav id="nav-menu-container">
           <ul class="nav-menu">
-            <li class="menu-active"><a href="#hero">Home</a></li>
-            <li><a href="#services">Event Details</a></li>
-            <li><a href="#team">Core Committee</a></li>
+            <!-- <li class="menu-active"><a href="#hero">Home</a></li> -->
             <li><a href="#about">About Us</a></li>
-            <li>
+            <li><a href="#services">Event Details</a></li>
+            <!-- <li><a href="#team">Core Committee</a></li> -->
+            <!-- <li>
               <a
                 href="https://drive.google.com/file/d/1MEoCiLx8tkRp3tvTXdADb1EcePELqebN/view?usp=sharing"
                 >Invitation</a
@@ -72,8 +72,8 @@
               <a
                 href="https://drive.google.com/file/d/1zUOc9_a4IeTLpqweRoJ6fgL7dYJHPh62/view?usp=sharing"
                 >Rule Book</a
-              >
-            </li>
+              > -->
+            <!-- </li> -->
             <!-- <li><a href="">Gallery</a></li> -->
 
             <li><a href="#contact">Contact Us</a></li>
@@ -200,26 +200,26 @@
             }
           </style>
           <div class="flexc square">
-            <div class="">
-              <div class="">
+            <div>
+              <div>
                 <img
                   class="imgf"
-                  src="./img/founder.88041406.svg"
+                  src="./img/founder.svg"
                   alt="Dr. Shiv Nadar"
                   scale="0"
                 />
               </div>
               <div class="textf">
-                <h5 class="">Dr. Shiv Nadar</h5>
+                <h5>Dr. Shiv Nadar</h5>
                 Founder &amp; Chairman
                 <p><strong> HCL, Shiv Nadar Foundation</strong></p>
               </div>
             </div>
-            <div class="">
-              <div class="">
+            <div>
+              <div>
                 <img
                   class="imgf"
-                  src="./img/president.948688e0.svg"
+                  src="./img/president.svg"
                   alt="Ms. Kala Vijayakumar"
                   scale="0"
                 />
@@ -241,7 +241,7 @@
                     width: 150px;
                   "
                   class="imgf"
-                  src="./img/principal1.png"
+                  src="./img/principal.png"
                   alt="Dr. V.E. Annamalai"
                   scale="0"
                 />
