--- a/index.html
+++ b/index.html
@@ -45,17 +45,19 @@
 
   <body>
     <header id="header">
-      <div class="container">
-        <div id="logo" class="pull-left">
+      <div class="container-fluid">
+        <div id="logo">
           <a href="">
-            <div class="ssn">
-              <img src="./img/SSN.svg" style="width: 90px" />
+            <div>
+              <img src="./img/SSN.svg" style="width: 90px; margin-top: 5px" />
             </div>
           </a>
+          <img
+            src="./img/exlog_logo.jpeg"
+            style="width: 50px; margin-left: 25px"
+          />
         </div>
-        <div id="exl" class="exlo">
-          <img src="./img/exlog_logo.jpeg" style="width: 65px" />
-        </div>
+
         <nav id="nav-menu-container">
           <ul class="nav-menu">
             <!-- <li class="menu-active"><a href="#hero">Home</a></li> -->
